--- a/PBHLTH-W251-Project-Milestone-6.html
+++ b/PBHLTH-W251-Project-Milestone-6.html
@@ -646,7 +646,10 @@ health interventions for this vulnerable demographic.</p>
 vaccination rate indicates a proactive response to mitigate health
 risks. This positive correlation underscores the awareness and
 understanding among older individuals of the benefits of COVID-19
-vaccination in reducing the severity of respiratory infections.</p>
+vaccination in reducing the severity of respiratory infections. In
+summary, the combined analysis of Table 1 and Figure 1 provides a
+comprehensive understanding of the age-specific dynamics of influenza
+cases and COVID-19 vaccination in Alameda County.</p>
 <p>The insights gleaned from the analysis of influenza cases and
 COVID-19 vaccination data in Alameda County during the second quarter of
 2023 carry important implications for future public health initiatives.
@@ -663,13 +666,6 @@ refine strategies. These findings contribute to the groundwork for
 preparing healthcare systems for seasonal variations and underscore the
 need for research into age-related health disparities, ensuring that
 future interventions are both effective and equitable.</p>
-<p>In conclusion, the combined analysis of Table 1 and Figure 1 provides
-a comprehensive understanding of the age-specific dynamics of influenza
-cases and COVID-19 vaccination in Alameda County. These findings
-contribute valuable insights for public health policymakers, guiding
-future strategies to address the unique needs of different age groups
-and enhance overall community resilience against infectious
-diseases.</p>
 </div>
 </div>
 </div>
