--- a/PBHLTH-W251-Project-Milestone-6.html
+++ b/PBHLTH-W251-Project-Milestone-6.html
@@ -427,8 +427,8 @@ vaccination data in Alameda County during the second quarter of 2023.
 The table is organized by age categories, ranging from 0-17 to 65+, and
 includes various key metrics. In terms of flu cases, mean statistics,
 cumulative values, and severe cases are outlined for each age category.
-Notably, as age increases, there is a visible rise in severe flu
-cases.</p>
+Notably, as age increases, there is a visible rise in severe flu cases,
+shown by the mean new severe column.</p>
 <p>Shifting focus to COVID-19 vaccination, the table encapsulates key
 information such as the total population, estimated population, and
 vaccination coverage metrics. Vaccination rates demonstrate an
